[SYNCOPE-1908] Streamline Resources and Relationships management (#1167)