@@ -20,7 +20,9 @@ package org.apache.syncope.client.console.wizards.any;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 import org.apache.commons.collections4.ListUtils;
 import org.apache.commons.lang3.StringUtils;
@@ -32,8 +34,6 @@ import org.apache.syncope.client.console.panels.search.AnySelectionDirectoryPane
 import org.apache.syncope.client.console.panels.search.SearchClausePanel;
 import org.apache.syncope.client.console.panels.search.SearchUtils;
 import org.apache.syncope.client.console.rest.AnyObjectRestClient;
-import org.apache.syncope.client.console.rest.AnyTypeClassRestClient;
-import org.apache.syncope.client.console.rest.AnyTypeRestClient;
 import org.apache.syncope.client.console.rest.RelationshipTypeRestClient;
 import org.apache.syncope.client.console.wicket.markup.html.form.ActionLink;
 import org.apache.syncope.client.console.wicket.markup.html.form.ActionLink.ActionType;
@@ -44,16 +44,15 @@ import org.apache.syncope.client.ui.commons.Constants;
 import org.apache.syncope.client.ui.commons.ajax.form.IndicatorAjaxFormComponentUpdatingBehavior;
 import org.apache.syncope.client.ui.commons.ajax.markup.html.LabelInfo;
 import org.apache.syncope.client.ui.commons.markup.html.form.AjaxDropDownChoicePanel;
+import org.apache.syncope.client.ui.commons.markup.html.form.AjaxTextFieldPanel;
 import org.apache.syncope.client.ui.commons.wizards.any.AnyWrapper;
 import org.apache.syncope.client.ui.commons.wizards.any.UserWrapper;
 import org.apache.syncope.common.lib.to.AnyObjectTO;
 import org.apache.syncope.common.lib.to.AnyTO;
-import org.apache.syncope.common.lib.to.AnyTypeTO;
-import org.apache.syncope.common.lib.to.GroupableRelatableTO;
+import org.apache.syncope.common.lib.to.RelatableTO;
 import org.apache.syncope.common.lib.to.RelationshipTO;
 import org.apache.syncope.common.lib.to.RelationshipTypeTO;
 import org.apache.syncope.common.lib.types.AnyEntitlement;
-import org.apache.syncope.common.lib.types.AnyTypeKind;
 import org.apache.wicket.Component;
 import org.apache.wicket.PageReference;
 import org.apache.wicket.ajax.AjaxRequestTarget;
@@ -63,10 +62,8 @@ import org.apache.wicket.extensions.wizard.WizardModel.ICondition;
 import org.apache.wicket.extensions.wizard.WizardStep;
 import org.apache.wicket.markup.html.WebMarkupContainer;
 import org.apache.wicket.markup.html.basic.Label;
-import org.apache.wicket.markup.html.form.IChoiceRenderer;
 import org.apache.wicket.markup.html.panel.Fragment;
 import org.apache.wicket.markup.html.panel.Panel;
-import org.apache.wicket.model.IModel;
 import org.apache.wicket.model.Model;
 import org.apache.wicket.model.PropertyModel;
 import org.apache.wicket.model.ResourceModel;
@@ -79,12 +76,6 @@ public class Relationships extends WizardStep implements ICondition {
 
     @SpringBean
     protected RelationshipTypeRestClient relationshipTypeRestClient;
-
-    @SpringBean
-    protected AnyTypeRestClient anyTypeRestClient;
-
-    @SpringBean
-    protected AnyTypeClassRestClient anyTypeClassRestClient;
 
     @SpringBean
     protected AnyObjectRestClient anyObjectRestClient;
@@ -158,18 +149,19 @@ public class Relationships extends WizardStep implements ICondition {
     }
 
     protected List<RelationshipTO> getCurrentRelationships() {
-        return anyTO instanceof GroupableRelatableTO
-                ? GroupableRelatableTO.class.cast(anyTO).getRelationships()
+        return anyTO instanceof RelatableTO relatableTO
+                ? relatableTO.getRelationships()
                 : List.of();
     }
 
-    protected void addNewRelationships(final RelationshipTO... rels) {
-        getCurrentRelationships().addAll(List.of(rels));
+    protected void addNewRelationship(final RelationshipTO relaltionship) {
+        if (anyTO instanceof RelatableTO relatableTO) {
+            relatableTO.getRelationships().add(relaltionship);
+        }
     }
 
     @Override
     public boolean evaluate() {
-        // [SYNCOPE-1171] - skip current step when the are no relationships types in Syncope
         return !relationshipTypeRestClient.list().isEmpty();
     }
 
@@ -178,10 +170,6 @@ public class Relationships extends WizardStep implements ICondition {
         private static final long serialVersionUID = 6199050589175839467L;
 
         protected final RelationshipTO rel;
-
-        protected final AjaxDropDownChoicePanel<String> type;
-
-        protected final AjaxDropDownChoicePanel<AnyTypeTO> otherType;
 
         protected final WebMarkupContainer container;
 
@@ -198,60 +186,18 @@ public class Relationships extends WizardStep implements ICondition {
             rel = new RelationshipTO();
             rel.setEnd(RelationshipTO.End.LEFT);
 
-            List<String> availableRels = relationshipTypeRestClient.list().stream().
-                    map(RelationshipTypeTO::getKey).collect(Collectors.toList());
-
-            type = new AjaxDropDownChoicePanel<>("type", "type", new PropertyModel<>(rel, "type"));
-            type.setChoices(availableRels);
+            Map<String, RelationshipTypeTO> relationshipTypes = relationshipTypeRestClient.list().stream().
+                    filter(relationshipType -> relationshipType.getLeftEndAnyType().equals(anyTO.getType())).
+                    collect(Collectors.toMap(RelationshipTypeTO::getKey, Function.identity()));
+            AjaxDropDownChoicePanel<String> type = new AjaxDropDownChoicePanel<>(
+                    "type", "type", new PropertyModel<>(rel, "type"), false);
+            type.setChoices(relationshipTypes.keySet().stream().sorted().toList());
+            type.setNullValid(false);
             add(type.setOutputMarkupId(true).setOutputMarkupPlaceholderTag(true).setRenderBodyOnly(true));
 
-            List<AnyTypeTO> availableTypes = anyTypeRestClient.listAnyTypes().stream().
-                    filter(anyType -> anyType.getKind() != AnyTypeKind.GROUP
-                    && anyType.getKind() != AnyTypeKind.USER).collect(Collectors.toList());
-
-            otherType = new AjaxDropDownChoicePanel<>("otherType", "otherType", new PropertyModel<>(rel, "otherType") {
-
-                private static final long serialVersionUID = -5861057041758169508L;
-
-                @Override
-                public AnyTypeTO getObject() {
-                    for (AnyTypeTO obj : availableTypes) {
-                        if (obj.getKey().equals(rel.getOtherEndType())) {
-                            return obj;
-                        }
-                    }
-                    return null;
-                }
-
-                @Override
-                public void setObject(final AnyTypeTO object) {
-                    rel.setOtherEndType(Optional.ofNullable(object).map(AnyTypeTO::getKey).orElse(null));
-                }
-            }, false);
-            otherType.setChoices(availableTypes);
-            otherType.setChoiceRenderer(new IChoiceRenderer<>() {
-
-                private static final long serialVersionUID = -734743540442190178L;
-
-                @Override
-                public Object getDisplayValue(final AnyTypeTO object) {
-                    return object.getKey();
-                }
-
-                @Override
-                public String getIdValue(final AnyTypeTO object, final int index) {
-                    return object.getKey();
-                }
-
-                @Override
-                public AnyTypeTO getObject(final String id, final IModel<? extends List<? extends AnyTypeTO>> choices) {
-                    return choices.getObject().stream().
-                            filter(anyTypeTO -> id.equals(anyTypeTO.getKey())).findAny().orElse(null);
-                }
-            });
-            // enable "otherType" dropdown only if "type" option is selected - SYNCOPE-1140
-            otherType.setEnabled(false);
-            add(otherType.setOutputMarkupId(true).setOutputMarkupPlaceholderTag(true));
+            AjaxTextFieldPanel otherEndType = new AjaxTextFieldPanel(
+                    "otherType", "otherType", new PropertyModel<>(rel, "otherEndType"));
+            add(otherEndType.setEnabled(false).setOutputMarkupId(true).setOutputMarkupPlaceholderTag(true));
 
             container = new WebMarkupContainer("searchPanelContainer");
             add(container.setOutputMarkupId(true));
@@ -268,35 +214,29 @@ public class Relationships extends WizardStep implements ICondition {
                 @Override
                 protected void onUpdate(final AjaxRequestTarget target) {
                     container.addOrReplace(emptyFragment.setRenderBodyOnly(true));
-                    otherType.setModelObject(null);
-                    // enable "otherType" dropdown only if "type" option is selected - SYNCOPE-1140
-                    otherType.setEnabled(type.getModelObject() != null && !type.getModelObject().isEmpty());
-                    target.add(otherType);
-                    target.add(container);
-                }
-            });
 
-            otherType.getField().add(new IndicatorAjaxFormComponentUpdatingBehavior(Constants.ON_CHANGE) {
-
-                private static final long serialVersionUID = -1107858522700306810L;
-
-                @Override
-                protected void onUpdate(final AjaxRequestTarget target) {
-                    AnyTypeTO anyType = otherType.getModelObject();
-                    if (anyType == null) {
-                        container.addOrReplace(emptyFragment.setRenderBodyOnly(true));
+                    if (type.getModelObject() == null) {
+                        otherEndType.setModelObject(null);
                     } else {
-                        setupFragment(anyType);
-                        container.addOrReplace(fragment.setRenderBodyOnly(true));
+                        Optional.ofNullable(relationshipTypes.get(type.getModelObject())).
+                                map(RelationshipTypeTO::getRightEndAnyType).ifPresent(
+                                oet -> {
+                                    otherEndType.setModelObject(oet);
+
+                                    setupFragment(oet);
+                                    container.addOrReplace(fragment.setRenderBodyOnly(true));
+                                });
                     }
+
+                    target.add(otherEndType);
                     target.add(container);
                 }
             });
         }
 
-        protected void setupFragment(final AnyTypeTO anyType) {
+        protected void setupFragment(final String anyType) {
             anyObjectSearchPanel = new AnyObjectSearchPanel.Builder(
-                    anyType.getKey(),
+                    anyType,
                     new ListModel<>(new ArrayList<>()),
                     pageRef).
                     enableSearch(Specification.this).
@@ -304,11 +244,11 @@ public class Relationships extends WizardStep implements ICondition {
             fragment.addOrReplace(anyObjectSearchPanel.setRenderBodyOnly(true));
 
             anyObjectDirectoryPanel = new AnyObjectSelectionDirectoryPanel.Builder(
-                    anyTypeClassRestClient.list(anyType.getClasses()),
+                    List.of(),
                     anyObjectRestClient,
-                    anyType.getKey(),
+                    anyType,
                     pageRef).
-                    setFiql(SyncopeClient.getAnyObjectSearchConditionBuilder(anyType.getKey()).
+                    setFiql(SyncopeClient.getAnyObjectSearchConditionBuilder(anyType).
                             is(Constants.KEY_FIELD_NAME).notNullValue().query()).
                     setWizardInModal(true).build("searchResultPanel");
             fragment.addOrReplace(anyObjectDirectoryPanel.setRenderBodyOnly(true));
@@ -320,8 +260,8 @@ public class Relationships extends WizardStep implements ICondition {
                 AjaxRequestTarget target =
                         SearchClausePanel.SearchEvent.class.cast(event.getPayload()).getTarget();
                 String fiql = SearchUtils.buildFIQL(anyObjectSearchPanel.getModel().getObject(),
-                        SyncopeClient.getAnyObjectSearchConditionBuilder(anyObjectSearchPanel.getBackObjectType()));
-                AnyDirectoryPanel.class.cast(Specification.this.anyObjectDirectoryPanel).search(fiql, target);
+                        SyncopeClient.getAnyObjectSearchConditionBuilder(anyObjectSearchPanel.getAnyType()));
+                AnyDirectoryPanel.class.cast(anyObjectDirectoryPanel).search(fiql, target);
             } else if (event.getPayload() instanceof AnySelectionDirectoryPanel.ItemSelection) {
                 AjaxRequestTarget target =
                         AnySelectionDirectoryPanel.ItemSelection.class.cast(event.getPayload()).getTarget();
@@ -330,7 +270,7 @@ public class Relationships extends WizardStep implements ICondition {
                 rel.setOtherEndKey(right.getKey());
                 rel.setOtherEndName(AnyObjectTO.class.cast(right).getName());
 
-                Relationships.this.addNewRelationships(rel);
+                Relationships.this.addNewRelationship(rel);
 
                 Relationships.this.addOrReplace(getViewFragment().setRenderBodyOnly(true));
                 target.add(Relationships.this);
